
BCH:
- Bug fixing of the E_BUNCHt__(_) and related classes.
- Rewriting 'WriteAndAdjust()' methods.
- Renaming in 'Append' and rewriting 'Add' methods.
- Renaming 'Row()' into 'Search()'.
- Fixing bug in 'StoreAndAdjust()' method.

BITBCH:
- Fixing bug.
- Renaming 'Add' to 'Append'.
- Adapting to changes in 'BCH' library.
- Adding 'E_BIT_BUNCH(t)(_) macros.
- Fixing 'operator =' bug.

BTF:
- Adding a dummy 'Exists()' method, and the 'row__' type due to changes in 'STK' library.
- Adding 'Root' parameter to the 'Init' function.

BTS:
- Adding 'tBack' and 'tForward' in replacement of 'tParent'.

CCH:
- Renaming 'Add' to 'Append'.

CLNARG:
- Adapting to changes in 'BCH' library.
- Adaptinf to changes in 'CTN' library.

CTN:
- Renaming the 'Sync()' method in 'Set()' and 'Flush()'.
- Fixing GNU GCC issues.
- Renaming 'Create()' into 'New()' to avoid mistakes.
- Renaming 'Add' to 'Append'.
- Adding features to avoid problems which appears when some 'Flush' call are missed.
- Fixing mistake in 'Delete' method.
- Adding some tests about flushing in debug context.

CPE:
- Adding detection of cygwin.
- Disabling C++ warning C4786.
- Adding multithreading detection for CodeWarrior.

CVM:
- Adapting to changes in 'MDR' library.

DBT:
- Adapting to changes in 'LST' library.
- Adapting to changes in 'LSTBCH' library.
- Adding the virtual 'DBTAllocate' method.
- Using 'E_NAVt' macro.
- Adapting to changes in 'BTF' library.

DTFBSC:
- Adding 'byte__', 'short__' and 'long__' type.

DTFRMF:
- Adapting to CW.

DTR:
- Fixing call to an iexistent method;

EPSMSC:
- Adapting to changes in the 'STF' library.

ERR:
- Adding the 'tReturn' item.
- Adapting to changes in 'STF' library.

FLW:
- Changing some type definition to simplify castings.
- Changing 'datum__' definition from 'char' to 'unsigned char' to avoid
  problem when used as integer.

FLX:
- Adding some casting to avoid warning under VC++.
- Adapting to changes in 'BCH' library.

GNUMLL:
- Adapting to changes in 'TOL' library.